# storage

./: .env.example  .gitignore  AGENTS.md  README.md  UPDATER_GUIDE.md  box-float-menu.html  box-float.html  clear-first-run.js  close-ports.js  commitlint.config.js  eslint.config.js  index.html  main.ts  package-lock.json  package.json  preload.js  tsconfig.app.json  tsconfig.electron.json  tsconfig.node.json  version.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
electron/: backup.ts  index.ts  ipc.ts  logger.ts  shortcuts.ts  store.ts  updater.ts  validation.ts  window.ts
scripts/: generate-signature.ps1  latest.example.json
src/: App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: app.rs  auto_rules.rs  backup.rs  file_ops.rs  file_watch.rs  icons.rs  logger.rs  mod.rs  shortcuts.rs  storage.rs  window.rs
src/box-float/: BoxFloatApp.tsx  main.tsx  menu-float-main.tsx  menu-float-styles.css  styles.css
src/components/: AutoRuleManager.tsx  BoxManager.tsx  ColorPicker.tsx  ContextMenu.tsx  DataPathSelector.tsx  ItemList.tsx  ShortcutInput.tsx  WelcomeModal.tsx
src/config/: env.ts  index.ts
src/constants/: config.ts  index.ts  themes.ts
src/hooks/: index.ts  useDebounce.ts  useDragDrop.ts  useEvent.ts  useSortable.ts  useTheme.ts  useWindow.ts  useWindowLayout.ts
src/page/: Home.tsx  Settings.tsx
src/styles/: app.css  components.css  index.css  reset.css  variables.css
src/types/: common.ts  events.ts  (+5 more)
(+49 files in other folders)
